# film-central

./: Makefile  README.md  pyproject.toml  ruff.toml
film_central/: __init__.py
film_central/bflix/: query_optimizer.py  scraper.py
film_central/catflix/: __init__.py  scraper.py
film_central/vadapav/: scraper.py
film_central/vidsrcme/: scraper.py
film_central/vidsrcto/: scraper.py
film_central/vidsrcto/ext/: __init__.py  vidplay.py
mov_cli_films/: __init__.py
