[project]
name = "film-central"
description = "A mov-cli plugin for watching Films and Shows."
authors = []
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "amazing mov-cli plugin"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",

    "mov-cli>=4.0.3"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build"
]

[project.urls]
GitHub = "https://github.com/JDALab/film-central"
BugTracker = "https://github.com/JDALab/film-central/issues"

[tool.setuptools.dynamic]
version = { attr = "film_central.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["film_central*"]